--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 				<p>{{ userName }}</p>
 				<button 
 					class="btn btn-primary"
-					[disabled]="!userName.length > 0"
+					[disabled]="!(userName.length > 0)"
 					(click)="onClearUserName()"
 				>
 					Clear
