--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,46 +1,9 @@
+<app-header></app-header>
 <div class="container">
 	<div class="row">
-		<div class="col-xs-12">
-			<h3>I'm in the AppComponent</h3>
-			
-			<hr>
-			
-			<app-servers></app-servers>
-			<!-- <div app-servers></div> -->
-			<!-- <div class="app-servers"></div> -->
-
-			<hr>
-						
-			<success-alert></success-alert>
-			<WarningAlert></WarningAlert>
-
-			<hr>
-
-				<label>Username:</label>
-				<input
-					type="text"
-					class="form-control"
-					[(ngModel)]="userName"
-				>
-				<p>{{ userName }}</p>
-				<button 
-					class="btn btn-primary"
-					[disabled]="!(userName.length > 0)"
-					(click)="onClearUserName()"
-				>
-					Clear
-				</button>
-
+		<div class="col-md-12">
+			<app-recipes></app-recipes>
+			<app-shopping-list></app-shopping-list>
 		</div>
 	</div>
 </div>
-
-<!-- <div class="form-group">
-	<label for="exampleInputEmail1">{{ name }}</label>
-	<input 
-		type="email" 
-		class="form-control" 
-		id="exampleInputEmail1" 
-		[(ngModel)]="name"
-	>
-</div> -->
