--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -26,7 +26,7 @@
 					<button 
 						class="btn btn-success" 
 						type="submit"
-						(click)="submitIngredientForm({name: nameInput.value, amount: amountInput.value})"
+						(click)="submitIngredientForm()"
 					>Add</button>
 					<button class="btn btn-danger" type="button">Delete</button>
 					<button class="btn btn-primary" type="button">Clear</button>
