--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -10,7 +10,7 @@
 	<span class="pull-right">
 		<img
 			[src]="recipe.imagePath"
-			alt="{{ name }}"
+			alt="{{ recipe.name }}"
 			class="img-responsive"
 			style="max-height: 50px;"
 		>
