--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -26,7 +26,7 @@
 				Manage Recipe <span class="caret"></span>
 			</button>
 			<ul class="dropdown-menu">
-				<ul><a href="#">Add Ingredient</a></ul>
+				<ul><a (click)="addToShoppingList()" style="cursor: pointer">To Shopping List</a></ul>
 				<ul><a href="#">Edit Recipe</a></ul>
 				<ul><a href="#">Delete Recipe</a></ul>
 			</ul>
@@ -40,6 +40,13 @@
 </div>
 <div class="row">
 	<div class="col-xs-12">
-		Ingredients
+		<ul class="list-group">
+			<li 
+				class="list-group-item"
+				*ngFor="let ingredient of recipe.ingredients"
+			>
+				{{ ingredient.name }} - {{ ingredient.amount }}
+			</li>
+		</ul>
 	</div>
 </div>
