--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,3 +2,5 @@
 <p>Manage your Servers and Users.</p>
 
 <button class="btn btn-primary" (click)="onLoadServer(1)">Load Server 1</button>
+<button class="btn btn-default" (click)="onLogin()">Log In</button>
+<button class="btn btn-default" (click)="onLogout()">Log Out</button>
